--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="about" style="--clr:#d63ee7;"><center>I am a Web Designer (as of July 2023)</center></section>
         <section id="services" style="--clr:#f0f566;"><center>I can Design Websites</center></section>
         <section id="portfolio" style="--clr:#2dc6f0;"><center>Download My PORTFOLIO <br> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" title="Just Click On it">DOWNLOAD</a></center></section>
-        <section id="contact" style="--clr:#ed1bb5;"> <center><a href="https://www.instagram.com/chandresh_upadhyay_/" target="_blank">MY INSTAGRAM</a></center></section>
+        <section id="contact" style="--clr:#ed1bb5;"> <center><a href="https://www.instagram.com/chandresh_san/" target="_blank">MY INSTAGRAM</a></center></section>
         
         <script>
             let sec = document.querySelectorAll('section');
